tf/instance/security-group-web.tf


resource "aws_security_group" "wordpress" {
    name = "wp-sg"
    description = "Allow 80 and 443"

    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks =(var.ssh-ip == [""] ? ["${data.http.myip.body}/32"] : var.ssh-ip)
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = -1
        cidr_blocks = ["0.0.0.0/0"]
    }

}
